--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -21,12 +21,13 @@
       </li>
     </ul>
     <ul class="navbar-nav float-right">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Ingresar</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Registrarse</a>
-      </li>
+      <% if user_signed_in? %>
+        <li class="nav-item"><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
+        <li class="nav-item"><%= link_to "Desconectar", destroy_user_session_path, method: :delete, class:"nav-link" %></li>
+      <% else %>
+        <li class="nav-item active"><%= link_to "Registrarse", new_user_registration_path, class:"nav-link" %></li>
+        <li class="nav-item"><%= link_to "Conectar", new_user_session_path, class:"nav-link" %></li>
+      <% end %>
     </ul>
     </div>
   </div>
