--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -20,11 +20,15 @@
       </div>
       <div class="col-12">
         <ul class="social list-unstyled list-inline">
-         	<li class="list-inline-item"> <a href="https://twitter.com/yalexperience"> <i class="fa fa-twitter fa-3x" data-toggle="tooltip" data-placement="bottom" title="Twitter"> </i> </a></li>
-         	<li class="list-inline-item"> <a href="https://www.facebook.com/yalexperience/"> <i class="fa fa-facebook fa-3x" data-toggle="tooltip" data-placement="bottom" title="Facebook"> </i> </a></li>
-          <li class="list-inline-item"> <a href="#"> <i class="fa fa-skype fa-3x" data-toggle="tooltip" data-placement="bottom" title="Skype"></i> </a></li>
-          <li class="list-inline-item"> <a href="https://www.linkedin.com/company/yalex"> <i class="fa fa-linkedin fa-3x" data-toggle="tooltip" data-placement="bottom" title="Linkedin"></i> </a></li>
-          <li class="list-inline-item"> <a href="mailto:confianza@yalex.co"> <i class="fa fa-envelope fa-3x" data-toggle="tooltip" data-placement="bottom" title="e-mail"></i> </a></li>
+         	<li class="list-inline-item"> 
+           	<a href="" class="btn btn-outline-fb btn-lg"><i class="fa fa-facebook"></i> Facebook</a>
+          </li>
+          <li class="list-inline-item"> 
+           	<a href="" class="btn btn-outline-yt btn-lg"><i class="fa fa-youtube"></i> youtube</a>
+          </li>
+          <li class="list-inline-item"> 
+           	<a href="" class="btn btn-outline-twitt btn-lg"><i class="fa fa-twitter"></i> twitter</a>
+          </li>
         </ul>
       </div>
     </div>
