Add Heroku style

--- a/app/views/layouts/_services.html.erb
+++ b/app/views/layouts/_services.html.erb
@@ -11,7 +11,7 @@
       <div class="card card-outline-primary">
         <div class="card-block">
           <h4 class="card-title">Participación Ciudadana</h4>
-          <p class="card-text">Ayuda a diseñar, gestionar y evaluar las políticas públicas del país</p>
+          <p class="card-text">Ayuda a gestionar y evaluar las políticas públicas del país</p>
         </div>
       </div>
     </div>
