--- a/app/views/layouts/_video.html.erb
+++ b/app/views/layouts/_video.html.erb
@@ -1,14 +1,53 @@
 <div class="container">
-<br>
-<div class="row">
-	<article class="col">
-  	<h2>Video Makers</h2>
-  	<p>Nuestro compromiso es y será fortalecer el desarrollo de las comunidades vulnerables y la participación abierta para una etapa de afianzamiento, renovación y prosperidad. <button class="btn btn-outline-success">Leer más</button></p>
-  </article>
-</div>
-<div>
-<br>
-<div class="container">
+  <div class="row">
+  	<article class="col my-4">
+    	<h2>Porque vivimos juntos, decidimos juntos</h2>
+    </article>
+  </div>
+	<div class="row">
+    <div class="col-md-4">
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/i07qz_6Mk7g?rel=0" allowfullscreen></iframe>
+      </div>
+  	</div>
+    <div class="col-md-4">
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/GVemTjGu-PA?rel=0" allowfullscreen></iframe>
+      </div>
+  	</div>
+  	<div class="col-md-4">
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/Y5giTuB-lIU?rel=0" allowfullscreen></iframe>
+      </div>
+  	</div>
+  </div>
+  <div class="row">
+  	<article class="col my-4">
+    	<h2>La red Actúa</h2>
+    </article>
+  </div>
+	<div class="row">
+    <div class="col-md-4">
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/i07qz_6Mk7g?rel=0" allowfullscreen></iframe>
+      </div>
+  	</div>
+    <div class="col-md-4">
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/GVemTjGu-PA?rel=0" allowfullscreen></iframe>
+      </div>
+  	</div>
+  	<div class="col-md-4">
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/Y5giTuB-lIU?rel=0" allowfullscreen></iframe>
+      </div>
+  	</div>
+  </div>
+  <div class="row">
+  	<article class="col my-4">
+    	<h2>Cuando la gente se decide a Actuar</h2>
+    </article>
+  </div>
 	<div class="row">
     <div class="col-md-4">
       <div class="embed-responsive embed-responsive-4by3">
