--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,4 @@
 <%= render "layouts/nav" %> 
-<%= render "layouts/value" %>
+<%= render "layouts/welcome" %>
 <%= render "layouts/video" %>
-<%= render "layouts/video" %>
-<%= render "layouts/services" %> 
-<%= render "layouts/team" %> 
 <%= render "layouts/footer" %>
