--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,35 +1,37 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-toggleable-md navbar-inverse overlay">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" >
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="container">
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <%= link_to "ACTUEMOS", root_path, class: "navbar-brand" %> 
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+  <strong><%= link_to "ACTUEMOS", root_path, class: "navbar-brand" %> </strong>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav ml-auto mt-2 mt-md-0">
       <li class="nav-item active">
-        <%= link_to "Somos Renovación", "/#nosotros", class: "nav-link" %>
+        <strong><%= link_to "SEAMOS", "/seamos", class: "nav-link" %></strong>
         <span class="sr-only">(current)</span>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Acciones</a>
+        <strong><a class="nav-link" href="#">SOÑEMOS</a></strong>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Debates</a>
+        <strong><a class="nav-link" href="#">ACTUAMOS</a></strong>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Eventos</a>
+        <strong><a class="nav-link" href="#">HABLEMOS</a></strong>
       </li>
     </ul>
-    <ul class="navbar-nav float-right">
-      <% if user_signed_in? %>
-        <li class="nav-item"><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>
-        <li class="nav-item"><%= link_to "Desconectar", destroy_user_session_path, method: :delete, class:"nav-link" %></li>
-      <% else %>
-        <li class="nav-item active"><%= link_to "Registrarse", new_user_registration_path, class:"nav-link" %></li>
-        <li class="nav-item"><%= link_to "Conectar", new_user_session_path, class:"nav-link" %></li>
-      <% end %>
-    </ul>
-    </div>
   </div>
   </div>
 </nav>
+
+
+    <!--</ul>-->
+    <!--<ul class="navbar-nav float-right">-->
+    <!--  <% if user_signed_in? %>-->
+    <!--    <li class="nav-item"><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>-->
+    <!--    <li class="nav-item"><%= link_to "Desconectar", destroy_user_session_path, method: :delete, class:"nav-link" %></li>-->
+    <!--  <% else %>-->
+    <!--    <li class="nav-item active"><%= link_to "Registrarse", new_user_registration_path, class:"nav-link" %></li>-->
+    <!--    <li class="nav-item"><%= link_to "Conectar", new_user_session_path, class:"nav-link" %></li>-->
+    <!--  <% end %>-->
+    <!--</ul>-->
