views and  sessions

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -35,3 +35,9 @@ img {
 .overlay{
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+.seamos{
+  background: image-url('ciudadano1.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
