--- a/app/views/layouts/_video.html.erb
+++ b/app/views/layouts/_video.html.erb
@@ -1,26 +1,27 @@
 <div class="container">
-  <div class="row">
-  	<article class="col my-4">
-    	<h2>Porque vivimos juntos, decidimos juntos</h2>
-    </article>
-  </div>
-	<div class="row">
-    <div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/i07qz_6Mk7g?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-    <div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/GVemTjGu-PA?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-  	<div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/Y5giTuB-lIU?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-  </div>
+ <!-- <div class="row">-->
+ <!-- 	<article class="col my-4">-->
+ <!--   	<h2>Porque vivimos juntos, decidimos juntos</h2>-->
+ <!--   </article>-->
+ <!-- </div>-->
+	<!--<div class="row">-->
+ <!--   <div class="col-md-4">-->
+ <!--     <div class="embed-responsive embed-responsive-4by3">-->
+ <!--       <iframe class="embed-responsive-item" src="//www.youtube.com/embed/rC9Iu5zVGrA?rel=0" allowfullscreen></iframe>-->
+ <!--     </div>-->
+ <!-- 	</div>-->
+ <!--   <div class="col-md-4">-->
+ <!--     <div class="embed-responsive embed-responsive-4by3">-->
+ <!--       <iframe class="embed-responsive-item" src="//www.youtube.com/embed/fV4kqDZNSSk?rel=0" allowfullscreen></iframe>-->
+ <!--     </div>-->
+ <!-- 	</div>-->
+ <!-- 	<div class="col-md-4">-->
+ <!--     <div class="embed-responsive embed-responsive-4by3">-->
+ <!--       <iframe class="embed-responsive-item" src="//www.youtube.com/embed/Y5giTuB-lIU?rel=0" allowfullscreen></iframe>-->
+ <!--     </div>-->
+ <!-- 	</div>-->
+ <!-- </div>-->
+  
   <div class="row">
   	<article class="col my-4">
     	<h2>La red Actúa</h2>
@@ -29,17 +30,17 @@
 	<div class="row">
     <div class="col-md-4">
       <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/i07qz_6Mk7g?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/rC9Iu5zVGrA?rel=0" allowfullscreen></iframe>
       </div>
   	</div>
     <div class="col-md-4">
       <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/GVemTjGu-PA?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/fV4kqDZNSSk?rel=0" allowfullscreen></iframe>
       </div>
   	</div>
   	<div class="col-md-4">
       <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/Y5giTuB-lIU?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/nwJ_ozn37s8?rel=0" allowfullscreen></iframe>
       </div>
   	</div>
   </div>
@@ -51,17 +52,17 @@
 	<div class="row">
     <div class="col-md-4">
       <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/i07qz_6Mk7g?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/lQn8poFjLmo?rel=0" allowfullscreen></iframe>
       </div>
   	</div>
     <div class="col-md-4">
       <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/GVemTjGu-PA?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/tsHyN9zj8_o?rel=0" allowfullscreen></iframe>
       </div>
   	</div>
   	<div class="col-md-4">
       <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/Y5giTuB-lIU?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/VB6R-BgtCGM?rel=0" allowfullscreen></iframe>
       </div>
   	</div>
   </div>
