--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -3,12 +3,8 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-sm-10">
-        <h1>VIVIMOS JUNTOS, DECIDIMOS JUNTOS</h1>
-        <br>
-       <button type="button" class="btn btn-secondary btn-lg">Únete Ya</button>
+        <h1 class="display-4">VIVIMOS JUNTOS <br>DECIDIMOS JUNTOS</h1>
       </div>
     </div>
   </div>
 </section>
-
-
