--- a/app/views/pages/actuamos.html.erb
+++ b/app/views/pages/actuamos.html.erb
@@ -1,22 +1,25 @@
-<div class="container text-justify">
-  
-<h1 class="text-center">SEAMOS</h1>
-<p>ACTUEMOS es un instrumento de encuentro, diálogo y sobre todo de poder de transformación de Colombia que aglutina a aquellos que comparten en pensamiento y en corazón el siguiente DIAGNÓSTICO:</p>
-<ol>
-  <li><p>Hemos estado gobernandos por unos políticos profesionales, de todas las tendencias y partidos, cuyo interés no es el bienestar de la gente sino su propio interés personal. Roban de todas las formas posibles y se reparten el poder entre ellos mismos. Son políticos profesionales que no comparten, no entienden ni viven los problemas, sueños y anhelos de la gente de a pie. </li>
-  <li><p>Muchas gente, vecinos, familiares, amigos, compañeros de trabajo, se la pasan quejando de su realidad o de tales políticos pero no hacen nada para poderlo cambiar. Algunos por indiferencia al preferir dedicarse a su propia vida y de los suyos, sin importarle lo que ocurre alrededor; otros porque alguna vez tuvieron ilusión en la política y fueron defraudados y otros porque no encuentran la forma de canalizar su energía y anhelo de cambio.</p></li>
-  <li><p>En definitiva, Colombia adolesce de dos GRANDES MALES que terminan siendo las dos caras de una misma moneda: corrupción de los que mandan e indiferencia o impotencia de los que obedecen.</p></li>
-</ol>
+<div class="container">
+<p>Pues bien, ya es el momento de pasar a la acción o de volver a intentarlo. Hoy es diferente, hay una fisura en nuestra historia y nos la jugamos por nuestro país. </p>
 
-<p>Ante tal diagnóstico, ACTUEMOS se presenta como un instrumento de terapia colectiva que se propone como horizonte:</p>
-<ol>
-  <li><p>Ser una plataforma de aquellos que cansados e indignados de los políticos profesionales de siempre, quieran cambiarlos por gente honesta y gente que piense realmente en sus problemas.</p></li>
-  <li><p>Ser un intrumento para aquellos que aún no han encontrado un espacio donde puedan canalizar sus sueños, sus demandas, sus ganas de cambiar a Colombia.</p></li>
-  <li><p>Ser una red virtual y no virtual de aquellos que ya están haciendo algo por su país, ya sea de manera individual o grupal pero es conciente que solo en colectivo y en hermandad se puede llegar más lejos. ACTUEMOS es el espacio para juntarnos los que aún no nos conocemos. </p></li>
-  <li><p>Ser un mensaje para cuestionar e invitar al indiferente, de activación de ciudadanía. Es el momento de estar juntos. A problemas colectivos, soluciones colectivas.</p></li>
-</ol>
+Quieres contar una experiencia o proponer una iniciativa de cómo la gente puede ayudar a cambiar el país con sus propias acciones, c
 
-<p>Es por eso que ACTUEMOS es un hacer continuo de la gente para la gente. No es un aparato cerrado, ni desconoce que hay muchos y muchas intentando hacer algo por su país. Más bien, es el intento de agrupar y canalizar toda esa energía ciudadana insatisfecha. </p>
-</div>
+Nuestra propuesta es evidente, es lo que nos dice el sentido común:
+1)	No debemos permitir que los políticos profesionales sigan gobernando para que sigan robándose el país. 
+2)	Y para ello debemos activarnos como sujetos políticos y juntarnos colectivamente los que queremos un país tan grande como nuestros sueños.
+
+¿Actuemos para qué? 
+contruir un país donde todos podamos vivir bien.  
+
+¿Actuemos cómo?
+
+Para responder al por qué actuamos y para conseguir la meta del para qué actuamos, nos proponemos 4 formas de acción:
+1)	Actuemos desde la conciencia personal. Ya somos el cambio. En nuestra cotidianidad podemos construir país cuando no nos colamos en transmilenio, cuando recojemos los excrementos de nuestro perro, cuando respetamos al otro, cuando evitamos el atajo, y cuando no vemos al otro como competencia sino como compatriota.
+2)	Actuemos desde la conciencia colectiva: actuamos con el pleno reconocimiento que el dolor ante lo injusto de nuestro país, la indignación sentida ante el abuso y el robo de los políticos profesionales y el sueño de cambio de un país para vivir mejor, no es solo individual sino que es compartido por la gran mayoría. Tu dolor es mi dolor y por ello, ante problemas colectivos, soluciones colectivas. Actuemos ha de relizar múltiples acciones virtuales y en calle con un alto contenido pedagógico para re-construir esa conciencia colectiva. Tal construcción colectiva pasa por desvelar una y otra vez que los políticos profesionales, esos que nos han gobernado, las mismas familias de siempre, no solo no van a cambiar sino que si los dejamos van a seguir desfalcando el país; pero también, de manera parela, debemos incentivar el reconocimiento de que el poder del cambio en está en nosotros mismos si es que lo asumimos como tal. El poder de ellos es grande si el nuestro es pequeño, pero si el de nosotros crece el de ellos disminuirá. En este país, o son ellos (los políticos profesionales, las mismas familias de siempre, los que se reparten el poder entre sí, la misma rosca de siempre, los ladroens de cuello blanco) o somos nosotros (los jóvenes, los estudiantes, los trabajadores, las mujeres, los empresarios, los que hemos pasado horas y días esperando una cita médica, los que vemos cómo la justicia o nunca llega o solo se le aplica a los que no tienen dienro ni poder, los que se nos van los días pasando hojas de vida o los que tenemos angustia de no saber si nos hacen contrato por una año más por prestación de servicios; los que sentimos que la plata no alcanza para los gastos del mes, los que vemos cómo es casi imposible tener una casa propia, los que nos da miedo a que nos roben en la calle; los que estamos endeudados y se nos va la plata del mes pagando educación y/o vivienda (…), en definitiva, la gente de a pie que queremos salir adelante, tener más oportunidades y vivir mejor en un país mejor) 
+3)	Actuemos con vocación de poder: la toma de conciencia colectiva solo será efectiva si asumimos el reto de llegar a los espacios de poder del Estado. Actuemos es un instrumento para cambiar las instituciones del Estado a favor de la gente común. Pero solo eso es posible si es la misma gente común, como tú, la que llega a esos espacios de poder. No necesitamos más políticos profesionales que han vivido de la política, sino de gente que haga política para servir a los demás. Si no lo hacemos nosotros, juntos, ellos no lo harán. 
+
+Técnicas para que actuemos
+(solo puede ser recibida si se inscribe) 
+s has dejado una Colombia pequeña, cerrada, hostil. Donde la felicidad no esté reservada solo para unos apellidos
 
 
+</div>  
