--- a/app/views/pages/seamos.html.erb
+++ b/app/views/pages/seamos.html.erb
@@ -1,41 +1,20 @@
-<div class="container text-justify">
-  
-<h1 class="text-center">SEAMOS</h1>
-<p>ACTUEMOS es un instrumento de encuentro, diálogo y sobre todo de poder de transformación de Colombia que aglutina a aquellos que comparten en pensamiento y en corazón el siguiente DIAGNÓSTICO:</p>
-<ol>
-  <li><p>Hemos estado gobernandos por unos políticos profesionales, de todas las tendencias y partidos, cuyo interés no es el bienestar de la gente sino su propio interés personal. Roban de todas las formas posibles y se reparten el poder entre ellos mismos. Son políticos profesionales que no comparten, no entienden ni viven los problemas, sueños y anhelos de la gente de a pie. </li>
-  <li><p>Muchas gente, vecinos, familiares, amigos, compañeros de trabajo, se la pasan quejando de su realidad o de tales políticos pero no hacen nada para poderlo cambiar. Algunos por indiferencia al preferir dedicarse a su propia vida y de los suyos, sin importarle lo que ocurre alrededor; otros porque alguna vez tuvieron ilusión en la política y fueron defraudados y otros porque no encuentran la forma de canalizar su energía y anhelo de cambio.</p></li>
-  <li><p>En definitiva, Colombia adolesce de dos GRANDES MALES que terminan siendo las dos caras de una misma moneda: corrupción de los que mandan e indiferencia o impotencia de los que obedecen.</p></li>
-</ol>
-
-<p>Ante tal diagnóstico, ACTUEMOS se presenta como un instrumento de terapia colectiva que se propone como horizonte:</p>
-<ol>
-  <li><p>Ser una plataforma de aquellos que cansados e indignados de los políticos profesionales de siempre, quieran cambiarlos por gente honesta y gente que piense realmente en sus problemas.</p></li>
-  <li><p>Ser un intrumento para aquellos que aún no han encontrado un espacio donde puedan canalizar sus sueños, sus demandas, sus ganas de cambiar a Colombia.</p></li>
-  <li><p>Ser una red virtual y no virtual de aquellos que ya están haciendo algo por su país, ya sea de manera individual o grupal pero es conciente que solo en colectivo y en hermandad se puede llegar más lejos. ACTUEMOS es el espacio para juntarnos los que aún no nos conocemos. </p></li>
-  <li><p>Ser un mensaje para cuestionar e invitar al indiferente, de activación de ciudadanía. Es el momento de estar juntos. A problemas colectivos, soluciones colectivas.</p></li>
-</ol>
-
-<p>Es por eso que ACTUEMOS es un hacer continuo de la gente para la gente. No es un aparato cerrado, ni desconoce que hay muchos y muchas intentando hacer algo por su país. Más bien, es el intento de agrupar y canalizar toda esa energía ciudadana insatisfecha. </p>
-<p>ACTUEMOS es un continuo devenir. Existe si nos juntamos varios. Es posible si hay acción concreta. Las soluciones a los problemas que nos aquejan las debemos definir juntos y esta paltaforma es un espacio para ese diálogo. Por ahora reconocemos que hasta que no nos juntemos los ciudadanos de a pie, comunes y corrientes, en contra de los políticos profesionales que se roban el país (sin importar de qué partido sean), hasta que no renovemos la política, aún estamos en proyecto, por eso la invitación es para ti, para todos y todas, de que SEAMOS. Vivimos junt@s, decidimos junt@s. </p>
-
-<h1>ACTUEMOS ES EL LUGAR PARA</h1>
-<ul>
-  <li>L@s que quieren cambiar para bien a Colombia</li>
-  <li>L@s decepcionados de la política</li>
-  <li>L@s que están cansados del sistema de salud, l@s que creen que necesario mejorar el sistema de educativo. </li>
-  <li>L@s que están mamados de los políticos de siempre</li>
-  <li>L@s que quieren vivir mejor y tener más oportunidades</li>
-  <li>L@s soñadores quienes creen que aún es posible construir un mundo aun inacabado</li>
-  <li>L@s que sienten el llamado de la historia para hacer algo</li>
-  <li>L@s que tienen vocación de servicio </li>
-</ul>
-<h1>PARA QUIÉNES ACTUEMOS NO ES SU ESPACIO</h1>
-<ul>
-<li>Para aquell@s condenados por la justicia en cualquier tipo de delito</li>
-<li>Para los políticos profesionales (politiquero clientelista, deshonesto, mentiroso, corrupto, quien gobierna para sí mismo)</li>
-<li>Para quienes no aman a su Patria</li>
-</ul>
+<div class="container-fluid bg-faded">
+  <br>
+  <div class="row">
+    <div class="col-lg-4 offset-1 seamos">
+    </div>
+    <div class="col-lg-6 text-justify">
+      <h2 class="featurette-heading">Entendemos tús <span class="text-danger">problemas</span> y <span class="text-success">anhelos</span> </h2>
+      <br>
+      <p>Somos ciudadanos comunes y corrientes, sin grandes apellidos, ni altos salarios, nos transportamos en bus o bicicleta, y al igual que tú sufrimos para acceder al sistema de salud y a un trabajo digno.</p>
+      <p>También estamos cansados de los políticos de siempre y de los partidos que no entienden ni viven los problemas, sueños, y anhelos de la gente de a pie, y cuyo interés no es el bienestar colectivo, sino su propio interés personal.</p>
+      <p>Esa es la razón por la que nos decidimos a realizar acciones contra dos GRANDES MALES de nuestra amada Colombia, como son  la corrupción de los que mandan y la indiferencia o impotencia de los que obedecen.</p>
+    </div>
+  </div>
 </div>
 
-
+<div class="container my-4">
+  <p class="blockquote text-justify">La invitación es a que <strong>SEAMOS</strong> más críticos y comprometidos con acciones que aporten a un verdadero <strong>cambio</strong> y para lograrlo debemos contar con gente <strong>honesta</strong> como tú,  
+  dispuesta a enocntrar soluciones colectivas a problemas colectivos. </p>
+</div>
+  
