--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,22 +1,21 @@
 <br>
 <hr class="my-3">
-<br>
 <div class="clearfix"></div>
 <footer class="text-center">
   <div class="container-fluid">
-    <div class="row footer-above">
-      <div class="col-12">
-      	<ul class="list-unstyled list-inline footer-below">
-          <li class="list-inline-item"> <%=link_to_unless_current "Nosotros", root_path %></li> 
-          <li class="list-inline-item"> <%=link_to_unless_current "Política de Privacidad", root_path %></li>
-          <li class="list-inline-item"> <%=link_to_unless_current "Condiciones del Servicio", root_path %></li>
-          <li class="list-inline-item"> <%=link_to_unless_current "Preguntas Frecuentes", root_path %></li>
-        </ul>
-      </div>
-    </div>
+    <!--<div class="row footer-above">-->
+    <!--  <div class="col-12">-->
+    <!--  	<ul class="list-unstyled list-inline footer-below">-->
+    <!--      <li class="list-inline-item"> <%=link_to_unless_current "Nosotros", root_path %></li> -->
+    <!--      <li class="list-inline-item"> <%=link_to_unless_current "Política de Privacidad", root_path %></li>-->
+    <!--      <li class="list-inline-item"> <%=link_to_unless_current "Condiciones del Servicio", root_path %></li>-->
+    <!--      <li class="list-inline-item"> <%=link_to_unless_current "Preguntas Frecuentes", root_path %></li>-->
+    <!--    </ul>-->
+    <!--  </div>-->
+    <!--</div>-->
     <div class="row">
       <div class="col-12"> 
-        <p><h5>Copyright © 2017 - Actuemos Colombia │ Derechos Reservados</h5></p>
+        <p><h5>Copyright © 2017 - Actuemos │ Derechos Reservados</h5></p>
       </div>
       <div class="col-12">
         <ul class="social list-unstyled list-inline">
