--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,7 +3,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="container">
-  <strong><%= link_to "¡ A C T U E M O S !", root_path, class: "navbar-brand" %> </strong>
+    <!--<%= image_tag("actuemos.svg", size: "100", class: "d-inline-block align-top") %>-->
+    <strong><%= link_to "¡ A C T U E M O S !", root_path, class: "navbar-brand" %> </strong>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav ml-auto mt-2 mt-md-0">
       <li class="nav-item active">
