--- a/app/views/pages/hablemos.html.erb
+++ b/app/views/pages/hablemos.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <p class="text-justify my-3">Si quieres hacer parte del cambio, éstas decepcionado de la politica tradicional,
-  tienes vocación de servicio y quieres hacer parte de la historia de Colombia, activate ya en nuestra red y podemos ayudarte a crear tu video y promocionarlo.</p>
+  <p class="text-justify my-3">Si quieres hacer parte del cambio, éstas decepcionado de la política tradicional,
+  tienes vocación de servicio y quieres hacer parte de la historia de Colombia, actívate ya en nuestra red y podemos ayudarte a crear tu video y promocionarlo.</p>
 </div>
 
 <div class="container text-justify">
@@ -9,7 +9,7 @@
       <div class="feature">
         <h3 class="text-uppercase">Veedor</h3>
         <%= image_tag "veedor.png" %>
-          <p class="text-muted m-b-0">Denuncia irregularidades, manifesta tus inconformidades o conductas sospechosas en tú  barrio, trabajo, ciudad</p>
+          <p class="text-muted m-b-0">Denuncia irregularidades, manifiesta tus inconformidades o conductas sospechosas en tú  barrio, trabajo, ciudad</p>
       </div>
     </div> 
     <div class="col-lg-6 col-md-6 text-center">
