--- a/app/views/pages/seamos.html.erb
+++ b/app/views/pages/seamos.html.erb
@@ -4,7 +4,7 @@
     <div class="col-lg-4 offset-1 seamos">
     </div>
     <div class="col-lg-6 text-justify">
-      <h2 class="featurette-heading">Entendemos tús <span class="text-danger">problemas</span> y <span class="text-success">anhelos</span> </h2>
+      <h2 class="featurette-heading">Entendemos tus <span class="text-danger">problemas</span> y <span class="text-success">anhelos</span> </h2>
       <br>
       <p>Somos ciudadanos comunes y corrientes, sin grandes apellidos, ni altos salarios, nos transportamos en bus o bicicleta, y al igual que tú sufrimos para acceder al sistema de salud y a un trabajo digno.</p>
       <p>También estamos cansados de los políticos de siempre y de los partidos que no entienden ni viven los problemas, sueños, y anhelos de la gente de a pie, y cuyo interés no es el bienestar colectivo, sino su propio interés personal.</p>
@@ -15,6 +15,6 @@
 
 <div class="container my-4">
   <p class="blockquote text-justify">La invitación es a que <strong>SEAMOS</strong> más críticos y comprometidos con acciones que aporten a un verdadero <strong>cambio</strong> y para lograrlo debemos contar con gente <strong>honesta</strong> como tú,  
-  dispuesta a enocntrar soluciones colectivas a problemas colectivos. </p>
+  dispuesta a encontrar soluciones colectivas a problemas colectivos. </p>
 </div>
   
