--- a/app/views/pages/sonemos.html.erb
+++ b/app/views/pages/sonemos.html.erb
@@ -4,15 +4,41 @@
   vivimos en una Colombia, cerrada, hostil, intolerante y excluyente. Esta es la oportunidad de que SOÑEMOS juntos y construyamos las mejores propuestas de la gente para la gente. </p>
 
   <div class="row">
-    <div class="col-md-2">
-      <%= image_tag "woman1.jpg", class:"img-fluid" %>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-block">
+          <h3 class="card-title">Salud</h3>
+          <p class="card-text">¿Cuál es el sistema de salud de nuestros sueños?</p>
+          <a href="#" class="btn btn-primary">Participar</a>
+        </div>
+      </div>
     </div>
-    <div class="col-md-8">
-      <h5>¿Que propones para aumentar la estabilidad económica de las familias?</h5>
-      <h6>hace 17 horas por Eneida Olivella</h6>
-    </div>  
-    <div class="col-md-2">
-       <a href="#" class="btn btn-primary">Participar</a>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-block">
+          <h3 class="card-title">Special title treatment</h3>
+          <p class="card-text">With supporting text below as a natural le.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-block">
+          <h3 class="card-title">Salud</h3>
+          <p class="card-text">¿Cuál es el sistema de salud de nuestros sueños?</p>
+          <a href="#" class="btn btn-primary">Participar</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-block">
+          <h3 class="card-title">Special title treatment</h3>
+          <p class="card-text">With supporting text below as a natunal content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
